# genz-slang-explainer

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
api/: pyproject.toml
api/src/: __init__.py  inference.py  postprocess.py  retrieval.py  router.py
api/tests/: conftest.py  test_postprocess.py  test_retrieval.py  test_router.py
api/tests/test_data/: test_slang.jsonl
demo/: compare_base_vs_finetuned.py  demo_comparison.py
examples/: README.md  quick_test.py
training/: Train_TinyLlama_GenZ_Slang.ipynb
